# ComfyUI_FMJ_SaveImageVersions

./: README.md  __init__.py  load_metadata.py  pyproject.toml  restore_snapshot.bat  restore_snapshot.sh  save_restore_nodes.py  security_utils.py  snapshot.py  version_metadata_saver.py
tests/: Voici comment exécuter.txt  test_security_utils.py
tools/scripts/: validate_sha.bat  validate_sha.sh
tools/tests/: test_validate_sha.sh
