[project]
name = "ComfyUI_FMJ_SaveImageVersions"
description = "Sauvegarde d’images avec métadonnées complètes (prompt, seed, versions logicielles) + chargement intelligent."
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = [""]

[project.urls]
Repository = "https://github.com/bulldog68/ComfyUI_FMJ_SaveImageVersions"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bulldog68"
DisplayName = "ComfyUI_FMJ_SaveImageVersions"
Icon = ""
